--- a/app/src/main/res/layout/activity_admin_update_department.xml
+++ b/app/src/main/res/layout/activity_admin_update_department.xml
@@ -8,13 +8,28 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <TextView
+        android:id="@+id/heading"
+        style="@style/txt_heading_pro_detail"
+        android:layout_marginTop="20dp"
+        android:gravity="center"
+        android:textColor="@color/blue"
+        android:textSize="25sp"
+        android:text="Update Department"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <androidx.cardview.widget.CardView
         android:layout_width="350dp"
         android:layout_height="wrap_content"
         app:cardCornerRadius="25dp"
+        android:background="@color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toBottomOf="@+id/heading"
+        app:layout_constraintVertical_bias="0.09">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -38,7 +53,7 @@
                 style="@style/edit_text"
                 android:layout_marginTop="12dp"
                 android:background="@drawable/edit_txt_design"
-                android:hint="Enter Department Id"
+                android:editable="false"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintStart_toEndOf="parent"
@@ -55,14 +70,24 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/Dept_Id" />
 
+            <EditText
+                android:id="@+id/Dept_Name"
+                style="@style/edit_text"
+                android:layout_marginTop="12dp"
+                android:background="@drawable/edit_txt_design"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/txtdepName" />
+
 
             <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/Add_Dept"
+                android:id="@+id/Edit_Dept"
                 android:layout_width="150dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="32dp"
                 android:background="@drawable/button_design"
-                android:text="Add"
+                android:text="Update"
                 android:textAlignment="center"
                 android:textColor="@color/white"
                 android:textSize="25sp"
@@ -70,19 +95,12 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/Dept_Name" />
 
-            <EditText
-                android:id="@+id/Dept_Name"
-                style="@style/edit_text"
-                android:layout_marginTop="12dp"
-                android:background="@drawable/edit_txt_design"
-                android:hint="Enter Department Name"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/txtdepName" />
+
 
         </androidx.constraintlayout.widget.ConstraintLayout>
-
     </androidx.cardview.widget.CardView>
+
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
