--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -8,7 +8,6 @@
     android:background="@color/background"
     android:orientation="vertical">
 
-
     <ImageView
         android:layout_width="150dp"
         android:layout_height="150dp"
@@ -45,6 +44,7 @@
         android:hint="Email"
         android:textColorHint="@color/hint_clr"
         android:textSize="25dp"
+        android:singleLine="true"
         android:textColor="@color/btn_login"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -63,6 +63,7 @@
         android:textColorHint="@color/hint_clr"
         android:textColor="@color/btn_login"
         android:textSize="25dp"
+        android:singleLine="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -78,6 +79,7 @@
         android:hint="Confirm Password"
         android:textColorHint="@color/hint_clr"
         android:textColor="@color/btn_login"
+        android:inputType="textPassword"
         android:textSize="25dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
