--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -45,6 +45,7 @@
         android:hint="Enter Email"
         android:textColorHint="@color/hint_clr"
         android:textSize="25dp"
+        android:singleLine="true"
         android:textColor="@color/btn_login"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -61,7 +62,8 @@
         android:gravity="center"
         android:hint="Enter Password"
         android:textColorHint="@color/hint_clr"
-        android:inputType="textEmailAddress"
+        android:inputType="textPassword"
+        android:maxLength="15"
         android:textSize="25dp"
         android:textColor="@color/btn_login"
         app:layout_constraintBottom_toBottomOf="parent"
