--- a/app/src/main/res/layout/fragment_admin_see_holiday.xml
+++ b/app/src/main/res/layout/fragment_admin_see_holiday.xml
@@ -9,19 +9,49 @@
     android:background="@color/background"
     tools:context=".admin_see_holiday">
 
-    <HorizontalScrollView
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="0dp"
+        android:layout_weight="1">
 
-        <TableLayout
-            android:id="@+id/tablelayout"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/table_background"
-            android:stretchColumns="*">
+        <HorizontalScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-        </TableLayout>
+            <TableLayout
+                android:id="@+id/table_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/white"
+                android:stretchColumns="*">
 
-    </HorizontalScrollView>
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="#E6E1E1">
+
+                    <TextView
+                        android:text="Id"
+                        style="@style/txt_tbl_heading"/>
+
+                    <TextView
+                        style="@style/txt_tbl_heading"
+                        android:text="Holiday Name" />
+
+                    <TextView
+                        style="@style/txt_tbl_heading"
+                        android:text="Start Date" />
+
+                    <TextView
+                        style="@style/txt_tbl_heading"
+                        android:text="End Date" />
+
+                </TableRow>
+
+            </TableLayout>
+
+        </HorizontalScrollView>
+
+    </ScrollView>
 
 </LinearLayout>
