--- a/app/src/main/res/layout/fragment_dboard.xml
+++ b/app/src/main/res/layout/fragment_dboard.xml
@@ -34,6 +34,7 @@
                 app:layout_constraintStart_toStartOf="parent">
 
                 <ImageView
+                    android:id="@+id/profile"
                     android:layout_width="match_parent"
                     android:layout_height="200dp"
                     android:padding="10dp"
